[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name =  "netbox-fortigate"
version = "0.1.0"
description = "FortiGate automation workflow plugin for NetBox"

classifiers=[
    'Intended Audience :: Netbox',
    'Natural Language :: English',
]

requires-python = ">=3.10.0"
